platforms/ios/www/phone/css/changesyslogin.css
#change_sys_login_wrapper{
	position:fixed;
	width:100%;
	height:100%;
	display: none;
	z-index: 2;
}

.centerWindow{
	position: fixed;
	top:50%;
	left:50%;
	margin-left:-138px;
	margin-top:-90px;
	width:265px;
	height:180px;
	background:-webkit-gradient(linear, 0% 96%, 0% 0%, from(#397cbb), to(#54a4df));
	padding: 5px;
	border-radius: 4px;
	border:1px solid black;
}

.input_field input{
	border:none;
	height:40px;
	margin:0;
}
.change_sys_label{
	margin-left:5px;
}

.input_field{
	background-color: #FFFFFF;
}

.input_field:first-child{
	border-top-radius:6px;
}

.input_field:last-child{
	border-bottom-radius:6px;
}

.change_sys_login_btn{
	margin-top:5px;
	width:127.5px;
}

